--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,36 @@
 *:before,
 *:after,
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
+
 header {
   padding: 15px 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
+
 #banner {
   margin: 0;
   height: 520px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-image: url(../img/banners/ipad_air_banner.jpg);
   background-position: center top;
   background-size: cover;
@@ -44,3 +60,4 @@ header {
   line-height: 23px;
   color: #ffffff;
 }
+/*# sourceMappingURL=style.css.map */
