--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,16 @@
           box-sizing: border-box;
 }
 
-header {
-  padding: 15px 100px;
+#wrapper {
+  width: 70vw;
+  position: relative;
+  display: -ms-grid;
+  display: grid;
+}
+
+#header {
+  width: 70vw;
+  margin: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -16,8 +24,11 @@ header {
 }
 
 #banner {
-  margin: 0;
-  height: 520px;
+  margin: auto;
+  max-width: 1200px;
+  max-height: 600px;
+  width: 70vw;
+  height: 35vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -25,30 +36,31 @@ header {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   background-image: url(../img/banners/ipad_air_banner.jpg);
   background-position: center top;
-  background-size: cover;
+  background-size: contain;
 }
 
 #banner_product_name {
-  margin: 20px 0;
+  margin: 15px 0;
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
   font-size: 72px;
-  line-height: 84px;
+  line-height: 60px;
   color: #ffffff;
 }
 
 .add_to_cart_btn {
   width: 150px;
   height: 50px;
+  margin: 15px;
   border: none;
   outline: none;
   background: #0e49b5;
@@ -56,8 +68,112 @@ header {
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 23px;
   color: #ffffff;
+}
+
+#sort_container {
+  margin: 32px auto;
+  width: 70vw;
+  height: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border: 1px solid #dddada;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
+  border-radius: 5px;
+}
+
+#searchByName {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  border: none;
+}
+
+#devices_list {
+  margin: auto;
+  padding: 0;
+  width: 73vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.card {
+  width: 300px;
+  height: 480px;
+  margin: 20px 10px;
+  padding: 0;
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  overflow: hidden;
+  font-family: Roboto;
+  -webkit-box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+}
+
+.card_img {
+  width: 200px;
+  height: 200px;
+  margin: 10px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.card_title {
+  width: 80%;
+  margin-block: 0;
+  text-align: center;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.card_stock {
+  margin-block: 0;
+}
+
+.card_price {
+  margin-block: 0;
+}
+
+.card_stats {
+  height: 86px;
+  width: 100%;
+  background: #dae2ea;
+  padding: 0 20px;
+}
+
+.card_stats_reviews {
+  display: block;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  font-size: 14px;
 }
 /*# sourceMappingURL=style.css.map */
